fix: weird image loading border on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,8 +110,9 @@
   .tab-active {
     @apply opacity-100 
   }
-
 }
+
+@supports (font: -apple-system-body) and (-webkit-appearance: none) { img[loading="lazy"] { clip-path: inset(0.6px) } }
 
 :root {
   --max-width: 1100px;
